debug: Add debug output for launch template structure
- Add debug task to inspect bastion_lt variable structure
- Help identify correct attribute path for launch_template_id
- Temporary debug to resolve attribute error

--- a/roles/bastion/tasks/main.yml
+++ b/roles/bastion/tasks/main.yml
@@ -34,6 +34,10 @@
     tags: "{{ common_tags | combine({'Name': vpc_name + '-bastion-lt', 'Type': 'LaunchTemplate'}) }}"
   register: bastion_lt
 
+- name: Debug launch template structure
+  debug:
+    var: bastion_lt
+
 - name: Deploy bastion host instance
   ec2_instance:
     name: "{{ vpc_name }}-bastion-host"
